--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <div class="stars"></div>
     
     <!-- 主标题 -->
-    <div class="main-title">李洋生日快乐！</div>
+    <div class="main-title">邱添骏生日快乐！</div>
 
     <!-- 生日图标 -->
     <div class="birthday-icons">
@@ -234,7 +234,7 @@
             "生日快乐！🎂",
             "生日快乐！🎉",
             "生日快乐！🎁",
-            "李洋生日快乐！",
+            "邱添骏生日快乐！",
             "生日快乐！愿你岁岁平安！",
             "生日快乐！愿所有美好都围绕着你！",
             "生日快乐！今天是属于你的特别日子！",
@@ -246,41 +246,41 @@
             "生日快乐！事业有成！",
             "生日快乐！家庭美满！",
             "生日快乐！笑口常开！",
-            "李洋，生日快乐！新的一岁万事顺遂！",
+            "邱添骏，生日快乐！新的一岁万事顺遂！",
             "祝你生日快乐，好运连连！",
             "生日快乐！愿每一天都充满惊喜！",
             "生日快乐！被爱包围的每一天！",
-            "李洋，生日快乐！🎂🎁🎉",
+            "邱添骏，生日快乐！🎂🎁🎉",
             "生日快乐！快乐不止今天！",
             "生日快乐！愿你的梦想都成真！",
-            "李洋，生日快乐！前途无量！",
+            "邱添骏，生日快乐！前途无量！",
             "生日快乐！开心到飞起！",
             "生日快乐！幸福永远！",
-            "李洋，生日快乐！越活越精彩！",
+            "邱添骏，生日快乐！越活越精彩！",
             "生日快乐！美好如期而至！",
             "生日快乐！光芒万丈的你！",
-            "李洋，生日快乐！笑口常开！",
+            "邱添骏，生日快乐！笑口常开！",
             "生日快乐！平安喜乐！",
             "生日快乐！一切顺遂！",
-            "李洋，生日快乐！暴富暴美！",
+            "邱添骏，生日快乐！暴富暴美！",
             "生日快乐！健康长寿！",
             "生日快乐！感恩相遇！",
-            "李洋，生日快乐！未来可期！",
+            "邱添骏，生日快乐！未来可期！",
             "生日快乐！值得所有美好！",
             "生日快乐！永远18岁！",
-            "李洋，生日快乐！诸事顺遂！",
+            "邱添骏，生日快乐！诸事顺遂！",
             "生日快乐！生活明朗！",
             "生日快乐！万物可爱！",
-            "李洋，生日快乐！好运加满！",
+            "邱添骏，生日快乐！好运加满！",
             "生日快乐！元气满满！",
             "生日快乐！温暖善良！",
-            "李洋，生日快乐！前程似锦！",
+            "邱添骏，生日快乐！前程似锦！",
             "生日快乐！开心快乐！",
             "生日快乐！吉祥如意！",
-            "李洋，生日快乐！喜提新岁！",
+            "邱添骏，生日快乐！喜提新岁！",
             "生日快乐！每天都要开心哦！",
             "生日快乐！专属你的一天！",
-            "李洋，生日快乐！心想事成！",
+            "邱添骏，生日快乐！心想事成！",
             "生日快乐！光芒万丈！"
         ];
 
